<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BatasariAndroidApp</string>
    <string name="hello_world">Login</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    <string name="title_activity_location_tracker">LocationTrackerActivity</string>
    <string name="app_log_alt">BATASARI</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="company_hint">Enter 6 digit company identifier</string>
    <string name="Proceed">Proceed</string>
    <string name="Refresh">Refresh</string>

</resources>