<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:contentDescription="@string/app_log_alt"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/company_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="37dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/password_white"
        android:hint="@string/company_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnSingIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/company_id"
        android:background="@drawable/red_button"
        android:onClick="login"
        android:text="@string/Proceed" />

</RelativeLayout>