<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_log_alt"
            android:src="@drawable/logo" />
    </LinearLayout>

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/red_button"
        android:onClick="startService"
        android:text="@string/start_service" />

    <Button
        android:id="@+id/btnStopService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:onClick="stopService"
        android:text="@string/stop_service" />

</LinearLayout>